# notifierr

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
examples/: python_experiment.py  slurm_job.sh
src/notifier/: __init__.py  cli.py  core.py  hooks.py
